--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@tanstack/react-query": "^5.87.4",
     "antd": "^5.27.3",
     "axios": "^1.12.2",
