--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "sass-embedded": "^1.93.0",
     "tailwindcss": "^4.1.13",
     "vite": "^7.1.2"
   }
